@@ -1,3 +1,7 @@
+2010-10-19  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #16000: Move versioning selector to the version extension
+
 2010-10-19  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Raised DBAL to version 1.2.0alpha3
